Hc Svnt Dracones 2E: v.1.20 update preview, add number field to techniques

--- a/Hc Svnt Dracones Second Edition/hsd2.css
+++ b/Hc Svnt Dracones Second Edition/hsd2.css
@@ -244,10 +244,7 @@ div.sheet-profs span{
   font-weight: 600;
   font-size: small;
 }
-/*
-div.sheet-profs label input[type="number"] {
-  padding: 10px 0px;
-}*/
+
 
 /* ------ Ability + Backgrounds section ------- */
 div.sheet-ability {
@@ -266,15 +263,6 @@ div.sheet-ability label input[type="text"]{
   width: 73%;
 }
 
-/*
-div.sheet-ability > label {
-  display: inline-block;
-  border-style: solid;
-  padding: 0px;
-  margin: 0px;
-  width: 99%;
-  line-height:1;
-}*/
 
 /* --- Simplifications & Complications section -- */
 div.sheet-comps {
@@ -305,8 +293,12 @@ div.sheet-techq > span {
 }
 
 div.sheet-techq input[type="text"] {
-  width:90%;
   margin-left:5px;
+  width:82%;
+}
+div.sheet-techq input[type="number"] {
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
 /* ----------- Quirks & Personal section ------------ */
@@ -326,6 +318,7 @@ div.sheet-quirks input[type="number"] {
   padding-top: 3px;
   padding-bottom: 3px;
 }
+
 
 /* ------------------------- Page 2 ------------------------- */
 
@@ -464,6 +457,8 @@ div.sheet-inv-main input.sheet-ref {
   flex-flow: column;
   align-items: center;
 }
+
+
 /* -------------------------- Page 3 ----------------------- */
 
 /* ------ Large xp spending tracker ----- */
@@ -574,6 +569,8 @@ div.sheet-inv-main input.sheet-ref {
   margin-left: 150px;
 }
 
+
+
 /*------------------------------------*\
   #PAGE
 \*------------------------------------*/
@@ -634,14 +631,8 @@ input.sheet-tab3 + span::before
     left: 415px;
 }
 
-/* styles page content looks */
 
-/*
-div.sheet-tab-content
-{
-    position: relative;
-    top: -35px;
-}*/
+/* styles page content looks */
 
 div.sheet-pg1 {
   display: grid;
@@ -691,6 +682,7 @@ div.sheet-pg3 {
 }
 
 div.sheet-tab-content { display: none; }
+
 
 /*------------------------------------*\
   #SPECIAL
