saving npc progress

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -207,76 +207,9 @@ input:checked + .sheet-slider:before {
 .sheet-toggle input[type='radio']:checked + span {
   color: #FCD116; }
 
-/********************************************************************************************************/
-/********************************* PC & NPC SHEET SHOW & HIDE SETTINGS ***********************************/
-/********************************************************************************************************/
-/* DISPLAY SETTINGS
-	============================= */
-.sheet-npc, .sheet-pc, .sheet-arms, .sheet-augs, .sheet-core, .sheet-gear, .sheet-options, .sheet-social, .sheet-magic, .sheet-matrix, .sheet-vehicle, .sheet-settings, input.sheet-settings-toggle:checked ~ div.sheet-display,
-input.sheet-settings-toggle:checked ~ .sheet-attr-col .sheet-attr-und div.sheet-display,
-input.sheet-settings-toggle ~ .sheet-attr-lim div.sheet-settings,
-input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-display,
-input.sheet-settings-toggle[value='settings'] ~ div.sheet-display,
-input.sheet-settings-toggle[value='display'] ~ div.sheet-settings,
-input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, .sheet-hide-magic, .sheet-hide-resonance, .sheet-grunt, .sheet-host, .sheet-sprite, .sheet-skills-active,
-.sheet-skills-know,
-.sheet-skills-lang, .sheet-magic-spells, .sheet-magic-preps, .sheet-magic-rituals, .sheet-quality, .sheet-martial, .sheet-collapsable .sheet-desc, .sheet-collapsable .sheet-desc-lifestyle {
-  display: none; }
-
-.sheet-tab-switch[value='active'] ~ .sheet-skills-active,
-.sheet-tab-switch[value='knowledge'] ~ .sheet-skills-know,
-.sheet-tab-switch[value='language'] ~ .sheet-skills-lang, .sheet-magic-toggle[value='spells'] ~ .sheet-magic-spells, .sheet-magic-toggle[value='preps'] ~ .sheet-magic-preps, .sheet-magic-toggle[value='rituals'] ~ .sheet-magic-rituals, .sheet-tab-switch[value='quality'] ~ .sheet-quality, .sheet-tab-switch[value='martial'] ~ .sheet-martial, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc {
-  display: inline; }
-
-input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-attribute.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-attribute.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-attribute.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-attribute.sheet-vehicle, .sheet-pc .sheet-tabs, div.sheet-skill-box div.sheet-row-long, .sheet-npc .sheet-tabs, .sheet-npc .sheet-body, .sheet-npc .sheet-body .sheet-column {
-  display: inline-grid;
-  grid-column-gap: 1%;
-  grid-row-gap: 1%; }
-
-.sheet-pictos, .sheet-settings-toggle input[type='checkbox'] + span, .sheet-flag-primary + div > span, .sheet-cc-row button[name*='shots'], .sheet-cc-row button[name='act_reload'], .sheet-cc-row button[name='act_primary_ammo'], .repcontrol .repcontrol_edit:after,
-.repcontrol .repcontrol_add:after, .itemcontrol .repcontrol_del {
-  font-family: 'Pictos'; }
-
-input[name='attr_sheet_type']:not([value='pc']) ~ .sheet-npc,
-input[name='attr_sheet_type'][value='pc'] ~ .sheet-pc, .sheet-options_toggle[value='arms'] ~ .sheet-arms, .sheet-options_toggle[value='augs'] ~ .sheet-augs, .sheet-options_toggle[value='core'] ~ .sheet-core, .sheet-options_toggle[value='gear'] ~ .sheet-gear, .sheet-options_toggle[value='options'] ~ .sheet-options, .sheet-options_toggle[value='social'] ~ .sheet-social, .sheet-options_toggle[value='magic'] ~ .sheet-magic, .sheet-options_toggle[value='matrix'] ~ .sheet-matrix, .sheet-options_toggle[value='vehicle'] ~ .sheet-vehicle, input[name='attr_stats_toggle'][value='settings'] ~ .sheet-attribute .sheet-settings,
-input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-settings, .sheet-character-type[value='magic'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, input[name='attr_flag_special'][value='magic'] ~ .sheet-npc .sheet-hide-magic, .sheet-character-type[value='resonance'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, input[name='attr_flag_special'][value='resonance'] ~ .sheet-npc .sheet-hide-resonance, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-rows.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-rows.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-rows.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-rows.sheet-vehicle, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display,
-.sheet-static {
-  display: inline-block; }
-
-/***** PC AND NPC *****/
-/***** TABS *****/
-/***** SETTINGS *****/
-/*** TOGGLE ***/
-.sheet-display,
-input.sheet-settings-toggle:checked ~ div.sheet-settings,
-input.sheet-settings-toggle:checked ~ .sheet-attr-col .sheet-attr-und div.sheet-settings,
-input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-settings {
-  background: none;
-  display: inherit;
-  font-size: 1em;
-  text-align: left;
-  width: 100%; }
-
-input.sheet-settings-toggle[value='display'] ~ div.sheet-pc div.sheet-display,
-input.sheet-settings-toggle[value='settings'] ~ div.sheet-pc div.sheet-settings {
-  display: inline-block; }
-
-input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-magic,
-input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-resonance,
-input[name='attr_flag_special'][value='resonance'] ~ div.sheet-npc .sheet-hide-magic,
-input[name='attr_flag_special'][value='magic'] ~ div.sheet-npc .sheet-hide-resonance,
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-attribute .sheet-settings.sheet-hide-magic,
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-attribute .sheet-settings.sheet-hide-resonance,
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-settings.sheet-hide-magic,
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-settings.sheet-hide-resonance {
-  display: none; }
-
-/***** NPC TYPES *****/
-.sheet-pc .sheet-tabs input[value*='arms'] ~ button[name*='arms'], .sheet-pc .sheet-tabs input[value*='augs'] ~ button[name*='augs'], .sheet-pc .sheet-tabs input[value*='core'] ~ button[name*='core'], .sheet-pc .sheet-tabs input[value*='gear'] ~ button[name*='gear'], .sheet-pc .sheet-tabs input[value*='options'] ~ button[name*='options'], .sheet-pc .sheet-tabs input[value*='social'] ~ button[name*='social'], .sheet-pc .sheet-tabs input[value*='magic'] ~ button[name*='magic'], .sheet-pc .sheet-tabs input[value*='matrix'] ~ button[name*='matrix'], .sheet-pc .sheet-tabs input[value*='vehicle'] ~ button[name*='vehicle'] {
-  background-color: #610b0d;
-  box-shadow: inset 0px 0px 3px 1px #e31715;
-  color: #fff; }
-
+/******************************************************************************/
+/********************************* VARIABLES *********************************/
+/****************************************************************************/
 /********************************************************************************************************/
 /**************************************** START OF THE PC SHEET *******************************************/
 /********************************************************************************************************/
@@ -1818,6 +1751,7 @@ input.sheet-skill-select {
     .sheet-npc .sheet-body .sheet-column {
       width: 100%; }
     .sheet-npc .sheet-body .sheet-rows {
+      margin-bottom: 2%;
       width: 100%; }
       .sheet-npc .sheet-body .sheet-rows button {
         font-size: 1.1em;
@@ -1838,6 +1772,80 @@ input.sheet-skill-select {
     font-variant: small-caps;
     text-align: center;
     text-decoration: underline; }
+
+/********************************************************************************************************/
+/********************************* PC & NPC SHEET SHOW & HIDE SETTINGS ***********************************/
+/********************************************************************************************************/
+/* DISPLAY SETTINGS
+	============================= */
+.sheet-skills-active,
+.sheet-skills-know,
+.sheet-skills-lang, .sheet-magic-spells, .sheet-magic-preps, .sheet-magic-rituals, .sheet-quality, .sheet-martial, .sheet-collapsable .sheet-desc, .sheet-collapsable .sheet-desc-lifestyle, .sheet-npc, .sheet-pc, .sheet-arms, .sheet-augs, .sheet-core, .sheet-gear, .sheet-options, .sheet-social, .sheet-magic, .sheet-matrix, .sheet-vehicle, .sheet-settings, input.sheet-settings-toggle:checked ~ div.sheet-display,
+input.sheet-settings-toggle:checked ~ .sheet-attr-col .sheet-attr-und div.sheet-display,
+input.sheet-settings-toggle ~ .sheet-attr-lim div.sheet-settings,
+input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-display,
+input.sheet-settings-toggle[value='settings'] ~ div.sheet-display,
+input.sheet-settings-toggle[value='display'] ~ div.sheet-settings,
+input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, .sheet-hide-magic, .sheet-hide-resonance, .sheet-grunt, .sheet-host, .sheet-sprite {
+  display: none; }
+
+.sheet-tab-switch[value='active'] ~ .sheet-skills-active,
+.sheet-tab-switch[value='knowledge'] ~ .sheet-skills-know,
+.sheet-tab-switch[value='language'] ~ .sheet-skills-lang, .sheet-magic-toggle[value='spells'] ~ .sheet-magic-spells, .sheet-magic-toggle[value='preps'] ~ .sheet-magic-preps, .sheet-magic-toggle[value='rituals'] ~ .sheet-magic-rituals, .sheet-tab-switch[value='quality'] ~ .sheet-quality, .sheet-tab-switch[value='martial'] ~ .sheet-martial, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc {
+  display: inline; }
+
+.sheet-pc .sheet-tabs, div.sheet-skill-box div.sheet-row-long, .sheet-npc .sheet-tabs, .sheet-npc .sheet-body, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-attribute.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-attribute.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-attribute.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-attribute.sheet-vehicle {
+  display: inline-grid;
+  grid-column-gap: 1%;
+  grid-row-gap: 1%; }
+
+.sheet-pictos, .sheet-settings-toggle input[type='checkbox'] + span, .sheet-flag-primary + div > span, .sheet-cc-row button[name*='shots'], .sheet-cc-row button[name='act_reload'], .sheet-cc-row button[name='act_primary_ammo'], .repcontrol .repcontrol_edit:after,
+.repcontrol .repcontrol_add:after, .itemcontrol .repcontrol_del {
+  font-family: 'Pictos'; }
+
+.sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display, .sheet-npc .sheet-body .sheet-column, input[name='attr_sheet_type']:not([value='pc']) ~ .sheet-npc,
+input[name='attr_sheet_type'][value='pc'] ~ .sheet-pc, .sheet-options_toggle[value='arms'] ~ .sheet-arms, .sheet-options_toggle[value='augs'] ~ .sheet-augs, .sheet-options_toggle[value='core'] ~ .sheet-core, .sheet-options_toggle[value='gear'] ~ .sheet-gear, .sheet-options_toggle[value='options'] ~ .sheet-options, .sheet-options_toggle[value='social'] ~ .sheet-social, .sheet-options_toggle[value='magic'] ~ .sheet-magic, .sheet-options_toggle[value='matrix'] ~ .sheet-matrix, .sheet-options_toggle[value='vehicle'] ~ .sheet-vehicle, input[name='attr_stats_toggle'][value='settings'] ~ .sheet-attribute .sheet-settings,
+input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-settings, .sheet-character-type[value='magic'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, input[name='attr_flag_special'][value='magic'] ~ .sheet-npc .sheet-hide-magic, .sheet-character-type[value='resonance'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, input[name='attr_flag_special'][value='resonance'] ~ .sheet-npc .sheet-hide-resonance, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-rows.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-rows.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-rows.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-rows.sheet-vehicle,
+.sheet-static {
+  display: inline-block; }
+
+/***** PC AND NPC *****/
+/***** TABS *****/
+/***** SETTINGS *****/
+/*** TOGGLE ***/
+.sheet-display,
+input.sheet-settings-toggle:checked ~ div.sheet-settings,
+input.sheet-settings-toggle:checked ~ .sheet-attr-col .sheet-attr-und div.sheet-settings,
+input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-settings {
+  background: none;
+  display: inherit;
+  font-size: 1em;
+  text-align: left;
+  width: 100%; }
+
+input.sheet-settings-toggle[value='display'] ~ div.sheet-pc div.sheet-display,
+input.sheet-settings-toggle[value='settings'] ~ div.sheet-pc div.sheet-settings {
+  display: inline-block; }
+
+input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-magic,
+input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-resonance,
+input[name='attr_flag_special'][value='resonance'] ~ div.sheet-npc .sheet-hide-magic,
+input[name='attr_flag_special'][value='magic'] ~ div.sheet-npc .sheet-hide-resonance,
+input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-attribute .sheet-settings.sheet-hide-magic,
+input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-attribute .sheet-settings.sheet-hide-resonance,
+input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-settings.sheet-hide-magic,
+input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-settings.sheet-hide-resonance {
+  display: none; }
+
+/***** NPC TYPES *****/
+input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2),
+input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2) {
+  display: none; }
+
+.sheet-pc .sheet-tabs input[value*='arms'] ~ button[name*='arms'], .sheet-pc .sheet-tabs input[value*='augs'] ~ button[name*='augs'], .sheet-pc .sheet-tabs input[value*='core'] ~ button[name*='core'], .sheet-pc .sheet-tabs input[value*='gear'] ~ button[name*='gear'], .sheet-pc .sheet-tabs input[value*='options'] ~ button[name*='options'], .sheet-pc .sheet-tabs input[value*='social'] ~ button[name*='social'], .sheet-pc .sheet-tabs input[value*='magic'] ~ button[name*='magic'], .sheet-pc .sheet-tabs input[value*='matrix'] ~ button[name*='matrix'], .sheet-pc .sheet-tabs input[value*='vehicle'] ~ button[name*='vehicle'] {
+  background-color: #610b0d;
+  box-shadow: inset 0px 0px 3px 1px #e31715;
+  color: #fff; }
 
 /*****************************************************************************************/
 /**************************************** FOOTER ****************************************/
