--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -162,9 +162,14 @@ include src/pug/_mixins.pug
 			span(name='attr_display_'+attrName)
 			label.settings(data-i18n-title=val title=val)
 				input(name='attr_'+attrName+'_base' placeholder='3' title='@{'+attrName+'_base}' type='number' value='3')
-			if (val != 'Edge')
-				label.settings(data-i18n-title='modifier' title='modifier')
-					input(name='attr_'+attrName+'_modifier' placeholder='+' title='@{'+attrName+'_modifier}' type='number' value='')
+			label.settings(data-i18n-title='modifier' title='modifier')
+				input(name='attr_'+attrName+'_modifier' placeholder='+' title='@{'+attrName+'_modifier}' type='number' value='')
+		//- EDGE
+		+npcAttributeButton('edge', '@{edge}+@{attribute_roll}')
+		span(name='attr_edge')
+		label.settings(data-i18n-title='edge' title='edge')
+				input(name='attr_edge' placeholder='3' title='@{edge}' type='number' value='3')
+		//- ESSENCE
 		h1(data-i18n='ess') ess
 		span(name='attr_essence')
 		label.settings(data-i18n-title='essence' title='essence')
@@ -191,13 +196,13 @@ include src/pug/_mixins.pug
 	.body
 		.column
 			h1.settings(data-i18n='bonuses') Bonuses
-			.rows
+			.rows.grunt
 				h2(data-i18n='pr') Professional Rating
 				span(name='attr_pr')
 				label.settings(data-i18n-title='pr' title='Professional Rating')
 					input(name='attr_pr' title='@{pr}' type='number')
 			each val, key in {'Initiative': ['initiative', 'initiative'], 'Astral Initiative': ['astral', 'astralinitiative'], 'Matrix Initiative': ['matrix', 'matrixinitiative']}
-				- const npcCharacterType = key === 'Initiative' ? 'grunt' : key === 'Astral Initiative' ? 'grunt magic' : 'grunt sprite';
+				- const npcCharacterType = key === 'Initiative' ? 'grunt' : key === 'Astral Initiative' ? 'grunt magic' : 'grunt sprite host';
 				.rows(class=npcCharacterType)
 					+initiativeRoll(key, val[0], val[1])
 					label.settings(data-i18n-title='modifier' title='modifier')
@@ -250,7 +255,10 @@ include src/pug/_mixins.pug
 							input(name='attr_'+val[0] min='0' placeholder='0' title='@{'+val[0]+'}' type='number' value='')
 						span.settings.tiny-span() =
 						span(name='attr_'+val[0])
-		.column.grunt.vehicle
+			.rows.host.sprite
+				button(data-i18n='conditionmonitorm' name='act_cond_reset' type='action') Condition Monitor (M)
+				span(name='attr_matrix')
+		.column
 			h1.settings(data-i18n='modifier') Modifier
 			.rows
 				+rollButton('armorrating', 'base', '@{soak}')
@@ -279,6 +287,7 @@ include src/pug/_mixins.pug
 				label.settings(data-i18n-title=matrixdevice title='Matrix Device')
 					input.character-type(name='attr_flag_matrix' title='@{flag_matrix}' type='checkbox' value='matrix')
 					h2(data-i18n=matrixdevice) Matrix Device
+			.rows.vehicle
 				label.settings(data-i18n-title=drone title='Drone')
 					input.character-type(name='attr_flag_drone' title='@{flag_drone}' type='checkbox' value='drone')
 					h2(data-i18n=drone) Drone
