--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -88,14 +88,13 @@
      }
  } 
 
-/********************************************************************************************************/
-/********************************* PC & NPC SHEET SHOW & HIDE SETTINGS ***********************************/
-/********************************************************************************************************/
-
-/* DISPLAY SETTINGS
-	============================= */
-	@import 'src/scss/_hide'; 
-		
+/******************************************************************************/
+/********************************* VARIABLES *********************************/
+/****************************************************************************/
+$tabs:'arms', 'augs', 'core', 'gear', 'options', 'social', 'magic', 'matrix', 'vehicle';
+$characterTypes: 'npc', 'pc';
+$specialCharacters: 'magic', 'resonance';
+$npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 /********************************************************************************************************/
 /**************************************** START OF THE PC SHEET *******************************************/
@@ -324,11 +323,12 @@
 		width: 100%;
 
 		.sheet-column {
-			@extend %display-inline-grid;
+			@extend %display-inline-block;
 			width: 100%;
 		}
 
 		.sheet-rows {
+			margin-bottom: 2%;
 			width: 100%;
 
 			button {
@@ -367,6 +367,16 @@
 		}
 	}
 } 
+
+
+/********************************************************************************************************/
+/********************************* PC & NPC SHEET SHOW & HIDE SETTINGS ***********************************/
+/********************************************************************************************************/
+
+/* DISPLAY SETTINGS
+	============================= */
+	@import 'src/scss/_hide'; 
+		
 
 /*****************************************************************************************/
 /**************************************** FOOTER ****************************************/
