--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -17,7 +17,7 @@
 	}
 
 	/***** PC AND NPC *****/
-	@each $characterType in 'npc', 'pc'{
+	@each $characterType in $characterTypes {
 		.sheet-#{$characterType} { @extend %display-none; }
 	}
 
@@ -27,7 +27,6 @@
 	}
 
 	/***** TABS *****/
-	$tabs:'arms', 'augs', 'core', 'gear', 'options', 'social', 'magic', 'matrix', 'vehicle';
 	@each $tab in $tabs {
 		.sheet-#{$tab} { @extend %display-none; }
 		.sheet-options_toggle[value='#{$tab}'] ~ .sheet-#{$tab} { @extend %display-inline-block; }
@@ -68,7 +67,7 @@
       display: inline-block;
     }
 
-	@each $specialAttribute in 'magic', 'resonance' {
+	@each $specialAttribute in $specialCharacters {
 		//-PCs
 		.sheet-hide-#{$specialAttribute} { @extend %display-none;  }
 		.sheet-character-type[value='#{$specialAttribute}'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-#{$specialAttribute} { 
@@ -93,7 +92,7 @@
 	}
 
 	/***** NPC TYPES *****/
-	@each $npcType in 'grunt', 'host', 'sprite', 'vehicle' {
+	@each $npcType in $npcTypes {
 		.sheet-#{$npcType}  { @extend %display-none; }
 
 		input[name='attr_sheet_type'][value='#{$npcType}'] ~ .sheet-npc .sheet-attribute.sheet-#{$npcType} { 
@@ -103,6 +102,11 @@
 		input[name='attr_sheet_type'][value='#{$npcType}'] ~ .sheet-npc .sheet-rows.sheet-#{$npcType} { 
 			@extend %display-inline-block; 
 		}
+	}
+
+	input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2),
+	input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2)  { 
+		display: none;
 	}
 
 	%highlight-button {
