--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1747,7 +1747,8 @@ input.sheet-skill-select {
       grid-row: 4; }
   .sheet-npc .sheet-body {
     grid-template-columns: 52% 30% 1fr;
-    width: 100%; }
+    width: 100%;
+    /*:+:+:+: TEXT AREAS :+:+:+:*/ }
     .sheet-npc .sheet-body .sheet-column {
       width: 100%; }
     .sheet-npc .sheet-body .sheet-rows {
@@ -1768,6 +1769,16 @@ input.sheet-skill-select {
     .sheet-npc .sheet-body span[name='attr_physical_limit']:after,
     .sheet-npc .sheet-body span[name='attr_mental_limit']:after {
       content: ','; }
+    .sheet-npc .sheet-body .sheet-textrow {
+      grid-column: 1 / 4; }
+      .sheet-npc .sheet-body .sheet-textrow h2 {
+        display: inline; }
+      .sheet-npc .sheet-body .sheet-textrow label {
+        width: 100%; }
+        .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='initiate'], .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='submersion'] {
+          width: 4em; }
+          .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='initiate'] input, .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='submersion'] input {
+            width: 100%; }
   .sheet-npc .sheet-repeating h3 {
     font-variant: small-caps;
     text-align: center;
@@ -1805,7 +1816,11 @@ input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, .sheet-h
 
 .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display, .sheet-npc .sheet-body .sheet-column, input[name='attr_sheet_type']:not([value='pc']) ~ .sheet-npc,
 input[name='attr_sheet_type'][value='pc'] ~ .sheet-pc, .sheet-options_toggle[value='arms'] ~ .sheet-arms, .sheet-options_toggle[value='augs'] ~ .sheet-augs, .sheet-options_toggle[value='core'] ~ .sheet-core, .sheet-options_toggle[value='gear'] ~ .sheet-gear, .sheet-options_toggle[value='options'] ~ .sheet-options, .sheet-options_toggle[value='social'] ~ .sheet-social, .sheet-options_toggle[value='magic'] ~ .sheet-magic, .sheet-options_toggle[value='matrix'] ~ .sheet-matrix, .sheet-options_toggle[value='vehicle'] ~ .sheet-vehicle, input[name='attr_stats_toggle'][value='settings'] ~ .sheet-attribute .sheet-settings,
-input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-settings, .sheet-character-type[value='magic'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, input[name='attr_flag_special'][value='magic'] ~ .sheet-npc .sheet-hide-magic, .sheet-character-type[value='resonance'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, input[name='attr_flag_special'][value='resonance'] ~ .sheet-npc .sheet-hide-resonance, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-rows.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-rows.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-rows.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-rows.sheet-vehicle,
+input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-settings, .sheet-character-type[value='magic'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, input[name='attr_flag_special'][value='magic'] ~ .sheet-npc .sheet-hide-magic, .sheet-character-type[value='resonance'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, input[name='attr_flag_special'][value='resonance'] ~ .sheet-npc .sheet-hide-resonance, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-rows.sheet-grunt,
+input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-textrow.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-rows.sheet-host,
+input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-textrow.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-rows.sheet-sprite,
+input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-textrow.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-rows.sheet-vehicle,
+input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-textrow.sheet-vehicle,
 .sheet-static {
   display: inline-block; }
 
@@ -1827,6 +1842,7 @@ input.sheet-settings-toggle[value='display'] ~ div.sheet-pc div.sheet-display,
 input.sheet-settings-toggle[value='settings'] ~ div.sheet-pc div.sheet-settings {
   display: inline-block; }
 
+/* SHOW AND HIDE MAGIC AND RESONANCE SPECIFIC ATTRIBUTES BASED ON RADIO TOGGLE */
 input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-magic,
 input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-resonance,
 input[name='attr_flag_special'][value='resonance'] ~ div.sheet-npc .sheet-hide-magic,
@@ -1840,6 +1856,13 @@ input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-set
 /***** NPC TYPES *****/
 input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2),
 input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2) {
+  display: none; }
+
+input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2,
+input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + label + span,
+input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + span[name='attr_initiate'],
+input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + span[name='attr_submersion'],
+input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + span + label + label + span {
   display: none; }
 
 .sheet-pc .sheet-tabs input[value*='arms'] ~ button[name*='arms'], .sheet-pc .sheet-tabs input[value*='augs'] ~ button[name*='augs'], .sheet-pc .sheet-tabs input[value*='core'] ~ button[name*='core'], .sheet-pc .sheet-tabs input[value*='gear'] ~ button[name*='gear'], .sheet-pc .sheet-tabs input[value*='options'] ~ button[name*='options'], .sheet-pc .sheet-tabs input[value*='social'] ~ button[name*='social'], .sheet-pc .sheet-tabs input[value*='magic'] ~ button[name*='magic'], .sheet-pc .sheet-tabs input[value*='matrix'] ~ button[name*='matrix'], .sheet-pc .sheet-tabs input[value*='vehicle'] ~ button[name*='vehicle'] {
