--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -228,13 +228,9 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 	h3 { font-size: 0.85em; }
 
-	input[type='number'] {
-		width: 3em;
-	}
+	input[type='number'] { width: 3em; }
 
-	input[type='radio'] {
-		opacity: 1;
-	}
+	input[type='radio'] { opacity: 1; }
 
 	textarea, select, .sheet-matrix input {
 		color           : #fff;
@@ -355,6 +351,27 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		span[name='attr_physical_limit']:after,
 		span[name='attr_mental_limit']:after {
 			content: ',';
+		}
+
+		/*:+:+:+: TEXT AREAS :+:+:+:*/
+		.sheet-textrow { 
+			grid-column: 1 / 4; 
+			
+			h2 {display: inline;}
+
+			label { 
+				width: 100%;
+
+				&[data-i18n-title='initiate'],
+				&[data-i18n-title='submersion'] {
+					width: 4em;
+
+					& input {
+						width: 100%;
+					}
+				}
+			}
+			
 		}
 	}
 
