--- a/Shadowrun5thEdition/old.css
+++ b/Shadowrun5thEdition/old.css
@@ -338,11 +338,14 @@
        @extend %display-none;
     }
 
-    .sheet-optional-flag:not([value='0']) + .sheet-optional { @extend %display-inline-block; }
+    .sheet-optional-flag:not([value='0']) + .sheet-optional { 
+      @extend %display-inline-block; 
+    }
 
     .sheet-optional-flag:not([value='0']) + .sheet-textboxes {
       display: inherit;
-      width: 100%;}
+      width: 100%;
+    }
 
     .sheet-category[value='Combat'] + div,
     .sheet-category[value='Combat'] + div + div,
