--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -80,6 +80,7 @@
 		}
 	}
 
+	/* SHOW AND HIDE MAGIC AND RESONANCE SPECIFIC ATTRIBUTES BASED ON RADIO TOGGLE */
 	input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-magic,
 	input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-resonance,
 	input[name='attr_flag_special'][value='resonance'] ~ div.sheet-npc .sheet-hide-magic,
@@ -99,13 +100,23 @@
 			@extend %display-inline-grid; 
 		}
 
-		input[name='attr_sheet_type'][value='#{$npcType}'] ~ .sheet-npc .sheet-rows.sheet-#{$npcType} { 
+		input[name='attr_sheet_type'][value='#{$npcType}'] ~ .sheet-npc .sheet-rows.sheet-#{$npcType},
+		input[name='attr_sheet_type'][value='#{$npcType}'] ~ .sheet-npc .sheet-textrow.sheet-#{$npcType} { 
 			@extend %display-inline-block; 
 		}
 	}
 
 	input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2),
 	input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2)  { 
+		display: none;
+	}
+
+	//- HIDE TEXT ROWS WHEN THE TEXTAREA IS EMPTY
+	input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2,
+	input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + label + span,
+	input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + span[name='attr_initiate'],
+	input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + span[name='attr_submersion'],
+	input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + span + label + label + span {
 		display: none;
 	}
 
