--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -196,13 +196,16 @@ include src/pug/_mixins.pug
 	.body
 		.column
 			h1.settings(data-i18n='bonuses') Bonuses
+			//- PROFESSIONAL RATINGS
 			.rows.grunt
 				h2(data-i18n='pr') Professional Rating
 				span(name='attr_pr')
 				label.settings(data-i18n-title='pr' title='Professional Rating')
 					input(name='attr_pr' title='@{pr}' type='number')
+			
+			//- INITAITIVE
 			each val, key in {'Initiative': ['initiative', 'initiative'], 'Astral Initiative': ['astral', 'astralinitiative'], 'Matrix Initiative': ['matrix', 'matrixinitiative']}
-				- const npcCharacterType = key === 'Initiative' ? 'grunt' : key === 'Astral Initiative' ? 'grunt magic' : 'grunt sprite host';
+				- const npcCharacterType = key === 'Initiative' ? 'grunt' : key === 'Astral Initiative' ? 'grunt hide-magic' : 'grunt vehicle sprite host';
 				.rows(class=npcCharacterType)
 					+initiativeRoll(key, val[0], val[1])
 					label.settings(data-i18n-title='modifier' title='modifier')
@@ -216,6 +219,8 @@ include src/pug/_mixins.pug
 					span.tiny-span() +
 					span(name='attr_'+val[0]+'_dice')
 					span.tiny-span(data-i18n='d6') d6
+			
+			//- MOVEMENT
 			.rows.grunt
 				h2(data-i18n='movement') Movement
 				- const movementObject = {'walk': ' / ', 'run': ' / + ', 'movement_mod': ''}
@@ -229,9 +234,19 @@ include src/pug/_mixins.pug
 				each val, key in movementObject
 					span(name='attr_'+key title='@{'+key+'}')
 					span #{val}
+			
+			//- CONDITION MONITORS
 			.rows.grunt
 				button(data-i18n='conditionmonitorps' name='act_cond_reset' type='action') Condition Monitor (P/S)
 				+conditionMonitor(['physical', 'stun'])
+			.rows.vehicle
+				button(data-i18n='conditionmonitorpm' name='act_cond_reset' type='action') Condition Monitor (P/M)
+				+conditionMonitor(['physical', 'matrix'])
+			.rows.host.sprite
+				button(data-i18n='conditionmonitorm' name='act_cond_reset' type='action') Condition Monitor (M)
+				span(name='attr_matrix')
+
+			//- PHYSICAL, MENTAL, SOCIAL
 			.rows.grunt
 				each val in ['Physical', 'Mental', 'Social']
 					- const attrName = val.toLowerCase();
@@ -240,13 +255,14 @@ include src/pug/_mixins.pug
 						input(name='attr_'+attrName+'_limit_modifier' placeholder='0' title='@{'+attrName+'_limit_modifier}' type='number' value='0')
 					span.settings.tiny-span() =
 					span(name='attr_'+attrName+'_limit' title='@{'+attrName+'_limit}')
+			
+			//- PAIN TOLERANCE
 			.rows.grunt
 				h2.settings(data-i18n='paintolerance') Pain Tolerance
 				label.settings(data-i18n-title='paintolerance' title='paintolerance')
 					input(name='attr_pain_tolerance' min='-1' max='3' placeholder='0' title='@{pain_tolerance}' type='number' value='0')
-			.rows.vehicle
-				h2(data-i18n='conditionmonitorpm') Condition Monitor (P/M)
-				+conditionMonitor(['physical', 'matrix'])
+			
+			//- MATRIX ATTRIBUTES
 			.rows.vehicle
 				each val, key in {'Data Processing': ['data_processing', 'data_processing'], 'Firewall': ['firewall', 'firewall'], 'Device Rating': ['device_rating', 'devicerating']}
 					.rows
@@ -255,9 +271,6 @@ include src/pug/_mixins.pug
 							input(name='attr_'+val[0] min='0' placeholder='0' title='@{'+val[0]+'}' type='number' value='')
 						span.settings.tiny-span() =
 						span(name='attr_'+val[0])
-			.rows.host.sprite
-				button(data-i18n='conditionmonitorm' name='act_cond_reset' type='action') Condition Monitor (M)
-				span(name='attr_matrix')
 		.column
 			h1.settings(data-i18n='modifier') Modifier
 			.rows
@@ -274,7 +287,6 @@ include src/pug/_mixins.pug
 						span(name='attr_'+val[0])
 					else
 						span(name='attr_'+val[0]+'_protection')
-
 		.column
 			.rows
 				h1.settings(data-i18n='options') Options
@@ -291,6 +303,30 @@ include src/pug/_mixins.pug
 				label.settings(data-i18n-title=drone title='Drone')
 					input.character-type(name='attr_flag_drone' title='@{flag_drone}' type='checkbox' value='drone')
 					h2(data-i18n=drone) Drone
+
+		//TEXTBOXES
+		each val, key in {'Qualities': 'grunt', 'Augmentations': 'grunt', 'Gear': 'grunt vehicle', 'Programs': 'vehicle', 'Modifications': 'vehicle', 'Powers': 'grunt hide-magic', 'Weakness': 'grunt hide-magic'}
+			- const attrName = key.toLowerCase();
+			.textrow(class=val)
+				input(name='attr_'+attrName type='hidden' value='')
+				h2(data-i18n=attrName) key
+				label.settings(data-i18n-title=attrName title=key)
+					textarea(name='attr_'+attrName placeholder=key title='@{'+attrName+'}')
+				span(name='attr_'+attrName)
+
+		each val, key in {'Initiate': ['grunt hide-magic', 'metamagic'],'Submersion': ['grunt resonance-magic', 'echos']}
+			- const attrName = key.toLowerCase();
+			.textrow(class=val[0])
+				input(name='attr_'+attrName type='hidden' value='')
+				h2(data-i18n=attrName) key
+				span(name='attr_'+attrName)
+				label.settings(data-i18n-title=attrName title=key)
+					input(name='attr_'+attrName placeholder=attrName title='@{'+attrName+'}')
+				label.settings(data-i18n-title=val[1] title=val[1])
+					textarea(name='attr_'+val[1] placeholder=val[1] title='@{'+val[1]+'}')
+				span(name='attr_'+val[1])
+
+
 
 //- FOOTER
 include src/footer.html
